# AppAutoTest

./: .gitignore  LICENSE  README.md  conftest.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  run_appium.py
config/: caps.yaml
core/: __init__.py  base_page.py  config_loader.py  custom_expected_conditions.py  driver.py  enums.py  modules.py  run_appium.py  settings.py
docs/: AndroidSDK环境配置指南.md  常用参数.md
page_objects/: api_demod_home.py  home_page.py  login_page.py  wan_android_home.py  wan_android_project.py  wan_android_sidebar.py
test_cases/: conftest.py  test_api_demos.py  test_keyword_sample.py  test_login_demo.py  test_settings.py  test_wan_android_home.py  test_wan_android_project.py
tests/: test_finder_converter.py  test_logger.py
utils/: __init__.py  data_loader.py  decorators.py  dirs_manager.py  finder.py  logger.py  report_handler.py  日志模块使用指南.md
